--- a/public/css/style.css
+++ b/public/css/style.css
@@ -477,6 +477,32 @@ textarea {
     -webkit-transform: scale(0);
             transform: scale(0);
   }
+  /*----branch --- message ----*/
+  .message {
+    width: 100%;
+    background-color: #D9D9D9;
+    position: fixed;
+    bottom: 0;
+  }
+  .message .message_row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    background-color: #D9D9D9;
+  }
+  .message .message_row .message_area {
+    font-family: "Inter", sans-serif;
+    text-align: center;
+  }
+  .message .message_row .send_message {
+    background-color: #636363;
+    font-family: "Inter", sans-serif;
+    text-align: center;
+  }
 }
 @media (max-width: 1415px) {
   .header_ul {
@@ -624,7 +650,8 @@ textarea {
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
   width: 871px;
-  height: 440px;
+  height: 100%;
+  margin-bottom: 20px;
   background-color: #D9D9D9;
 }
 
@@ -637,7 +664,7 @@ textarea {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 790px;
-  height: 325px;
+  height: 100%;
   background-color: #8f8f88;
   margin: 0 auto;
 }
@@ -690,4 +717,298 @@ textarea {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+}
+
+/*---branches---*/
+.branches_container {
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
+.branches {
+  margin-top: 190px;
+}
+
+.branches_column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #D9D9D9;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 0 20px;
+}
+
+.branches_container {
+  background-color: #8F8F8F;
+  margin: 0 20px;
+  margin-bottom: 30px;
+}
+
+.branches_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.branches_name, .branches_author, .branches_theme {
+  font-family: "Inter", sans-serif;
+  font-size: 48px;
+  text-align: center;
+  width: 659px;
+  height: 61px;
+  background-color: #D9D9D9;
+}
+
+.branches_name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #AEA6A6;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 109px;
+  border: solid #D9D9D9 15px;
+}
+
+.branches_author, .branches_theme {
+  margin: 10px 20px;
+}
+
+/*-----branch----*/
+.branch_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1500px;
+}
+
+.branch {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 190px;
+}
+
+.branch_column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #D9D9D9;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  width: 100%;
+  margin: 0 20px;
+}
+
+.branch_container {
+  background-color: #8F8F8F;
+  margin: 0 20px;
+  margin-bottom: 30px;
+}
+
+.branch_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.branch_name {
+  font-family: "Inter", sans-serif;
+  font-size: 48px;
+  text-align: center;
+  width: 659px;
+  height: 61px;
+  background-color: #D9D9D9;
+}
+
+.branch_comment_info_avatar {
+  background-image: url(./../img/avatar.JPG);
+  background-size: 100%;
+  border-radius: 30px;
+  width: 48%;
+  height: 190px;
+}
+
+.branch_comment_info_container {
+  min-width: 450px;
+  width: 100%;
+  background-color: #D9D9D9;
+  height: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 20px;
+}
+
+.branch_comment_info_container2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.branch_theme {
+  width: 35%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.branch_comment_info_name, .branch_comment_info_role, .branch_comment_info_date {
+  font-family: "Inter", sans-serif;
+  font-size: 48px;
+  text-align: center;
+}
+
+.branch_name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #AEA6A6;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 109px;
+  border: solid #D9D9D9 15px;
+}
+
+.branch_theme {
+  margin: 10px 20px;
+}
+
+.branch_text {
+  width: 60%;
+  font-family: "Inter", sans-serif;
+  font-size: 35px;
+  background-color: #D9D9D9;
+  margin: 10px 12px;
+  padding: 34px;
+}
+
+@media (max-width: 1401px) {
+  .branch_text {
+    width: 100%;
+  }
+  .branch_theme {
+    width: 100%;
+    border-radius: 30px;
+  }
+  .branch_theme .branch_comment_info_avatar {
+    background-image: url(./../img/avatar.JPG);
+    background-size: 100%;
+    border-radius: 30px;
+    width: 20%;
+    height: 190px;
+    background-repeat: no-repeat;
+  }
+  .branch_theme .branch_comment_info_container2 {
+    margin: 0;
+    margin-left: 15px;
+  }
+}
+/*----send_message---*/
+.message {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #D9D9D9;
+  height: 130px;
+}
+.message .message_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 7px 30px;
+  padding: 5px 20px;
+}
+.message .message_row .message_area {
+  width: 70%;
+  font-family: "Inter", sans-serif;
+  font-size: 48px;
+  text-align: center;
+}
+.message .message_row .send_message {
+  background-color: #636363;
+  width: 30%;
+  font-family: "Inter", sans-serif;
+  font-size: 48px;
+  text-align: center;
+}
+
+@media (max-width: 955px) {
+  .message {
+    height: 28%;
+  }
+  .message_row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 7px;
+  }
+  .message_area {
+    min-width: 600px;
+  }
+  .send_message {
+    background-color: #636363;
+    min-width: 600px;
+    font-family: "Inter", sans-serif;
+    font-size: 48px;
+    text-align: center;
+  }
 }
