--- a/public/scss/style copy.scss
+++ b/public/scss/style copy.scss
@@ -372,43 +372,6 @@ textarea{
     .header_burger.active span{
         transform:scale(0); 
     }
-
-    /*----branch --- message ----*/
-    .message{
-        width: 100%;
-        background-color: #D9D9D9;
-        
-        position: fixed;
-        bottom: 0;
-        
-        .message_row{
-            display: flex;
-            
-            
-            
-            flex-direction: row;
-            
-            background-color: #D9D9D9;
-            .message_area{
-                
-                font-family: 'Inter', sans-serif;
-                
-                text-align: center;
-            }
-            .send_message{
-                background-color: #636363;
-                
-                
-                font-family: 'Inter', sans-serif;
-                
-                text-align: center;
-            
-                
-            }
-            
-        }
-        
-    }
 }
 @media (max-width: 1415px){
     .header_ul{
@@ -547,8 +510,7 @@ textarea{
 .my_profile_columns_columns{
     flex:0 1 50%;
     width: 871px;
-    height: 100%;
-    margin-bottom: 20px;
+    height: 440px;
     background-color: #D9D9D9;
   
 }
@@ -556,7 +518,7 @@ textarea{
     display: flex;
     flex-direction: column;
     width: 790px;
-    height: 100%;
+    height: 325px;
     background-color: #8f8f88;
     margin: 0 auto;
     
@@ -670,13 +632,10 @@ textarea{
     display: flex;
     
     max-width: 1500px;
-    
+    margin: 0 auto;
 }
 .branch{
-    display: flex;
-    justify-content: center;
     margin-top: 190px;
-    
 }
 
 
@@ -805,56 +764,3 @@ textarea{
 
 }
     
-/*----send_message---*/
-.message{
-    
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #D9D9D9;
-    height: 130px;
-    .message_row{
-        display: flex;
-        justify-content: center;
-        padding: 7px 30px;
-        
-        .message_area{
-            width: 70%;
-            font-family: 'Inter', sans-serif;
-            font-size: 48px;
-            text-align: center;
-        }
-        .send_message{
-            background-color: #636363;
-            width: 30%;
-            font-family: 'Inter', sans-serif;
-            font-size: 48px;
-            text-align: center;
-        }
-        
-        padding: 5px 20px;
-        
-    }
-    
-}
-@media (max-width:955px){
-    .message{
-        height: 28%;
-    }
-    .message_row{
-        flex-wrap: wrap;
-        padding: 7px;
-    }
-    .message_area{
-        min-width: 600px;
-        
-    }
-    .send_message{
-        background-color: #636363;
-        min-width: 600px;
-        font-family: 'Inter', sans-serif;
-        font-size: 48px;
-        text-align: center;
-    }
-    
-}
